# GPU-Laplacian-Solver

./: CMakeLists.txt  README.md  algorithm.md  requirements.txt
.github/workflows/: ci.yml
boundary_conditions/: boundary_conditions.json
common/: simulation_config.json
common/include/: simulation_config.h  solution_export.h
common/src/: config_loader.cpp  grid_initialization.cpp  solution_export.cpp
config/: simulation_config.json
cpu/: CMakeLists.txt  Makefile
cpu/include/: config.h  solution_export.h  solver_basic.h  solver_red_black.h  sor_methods.h
cpu/src/: boundary_conditions.cpp  grid_initialization.cpp  main.cpp  red_black_sor.cpp  red_black_sor_serial.cpp  solution_export.cpp  sor_methods.cpp  sor_methods.h  sor_serial.cpp  standard_sor.cpp
cuda/: CMakeLists.txt
cuda/data/: boundary_conditions.json
cuda/include/: grid_initialization.h  solver_base.h  solver_basic.h  solver_shared.h  solver_thrust.h  utilities.h
cuda/scripts/: plot_solution.py
cuda/src/: boundary_conditions.cpp  grid_initialization.cpp  main.cpp  plot.py  solution_export.cpp  solver_basic.cu  solver_shared.cu  solver_thrust.cu  sor.cu  sor_color_kernel.cuh  sor_red_black.cu
cuda/tests/: test_solver_basic.cpp  test_solver_shared.cpp  test_solver_thrust.cpp
docs/: COMPREHENSIVE_CODEBASE_REVIEW.md  MODERNIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  SOLVERS_LECTURE.md  SOLVER_IMPLEMENTATIONS.md
include/: analytical_solution.h  boundary_conditions.h  grid_initialization.h  laplace_analytical_solution.h  pitch2d.h  solver_base.h  sor_methods.h
results/: solution_BasicCUDA.csv  solution_BasicSOR_CPU.csv  solution_ConjugateGradientCUDA.csv  solution_MixedBCCUDA.csv  solution_MultigridCUDA.csv  solution_RedBlackSOR_CPU.csv  solution_SharedMemCUDA.csv  solution_TextureCUDA.csv
scripts/: plot_solution.py
solutions/: solution_basic_cpu.csv  solution_basic_cuda.csv  solution_red_black_cpu.csv  solution_thrust.csv
src/: Makefile  red_black_sor_serial.cpp  serial.cpp  sor_serial.cpp
src/common/include/: boundary_conditions.h  cuda_raii.hpp  grid_initialization.h  laplace_analytical_solution.h  paths.hpp  performance_benchmark.hpp  python.hpp  simulation_config.h  solution_export.h  solver_base.h  solver_exceptions.hpp  timers.hpp  utilities.h
src/common/src/: config_loader.cpp  grid_initialization.cpp  laplace_analytical_solution.cpp  paths.cpp  python.cpp  solution_export.cpp  solver_base.cpp  timers.cpp
src/cpu_solver/: CMakeLists.txt
src/cpu_solver/include/: solver_red_black.hpp  solver_standard_sor.hpp
src/cpu_solver/src/: solver_red_black.cpp  solver_standard_sor.cpp
src/cuda_solver/: CMakeLists.txt
src/cuda_solver/include/: multigrid_kernels.cuh  neumann_kernels.cuh  pitch2d.h  solver_basic_cuda.hpp  solver_mixed_bc_cuda.hpp  solver_multigrid_cuda.hpp  solver_shared_cuda.hpp  sor_kernels.cuh
src/cuda_solver/src/: solver_basic_cuda.cu  solver_mixed_bc_cuda.cu  solver_multigrid_cuda.cu  solver_shared_cuda.cu
src/main/: CMakeLists.txt  main.cpp  solver_registry.cpp  solver_registry.hpp
src/tests/: CMakeLists.txt  test_cpu_solvers.cpp  test_cuda_solvers.cu
